<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:backgroundTint="#80201818"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cardImage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="#86002324"
                    android:gravity="center"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTIL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="30dp"
                    android:hint="@string/email"
                    app:layout_constraintTop_toBottomOf="@id/cardImage"
                    app:layout_constraintBottom_toTopOf="@id/passwordTIL"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTIL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailTIL"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/logInButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryColor"
                    android:text="@string/log_in"
                    app:layout_constraintTop_toBottomOf="@id/passwordTIL"
                    app:layout_constraintBottom_toTopOf="@id/DontHaveAccountTV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/DontHaveAccountTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/sign_up"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/logInButton" />
                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/primaryColor"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@id/DontHaveAccountTV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="20dp"
                    android:clickable="true"
                    android:focusable="true"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>
